# Acronym-Generator

./: .gitignore  README.md  pyproject.toml  pytest.ini
app-src/: .env  .env.dist  manage.py  requirements-dev.txt  requirements.txt
app-src/acronyme/: __init__.py  apps.py  models.py  urls.py  views.py
app-src/acronyme/migrations/: __init__.py
app-src/acronyme/templates/acronyme/: acronyme.html  base.html  genauto.html  home.html
app-src/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
app-src/logger/: __init__.py  formatter.py
app-src/resources/: __init__.py  initlist.py  wordlist.py
tests/test_acronyme/: __init__.py  test_apps.py  test_class_views.py  test_genauto.py  test_urls.py  test_views.py
tests/test_logger/: __init__.py  test_formatter.py
