[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acronyme"
version = "0.1.0"
description = "Acronym Generator"
authors = [
    {name = "Antoine MEHEUT", email="github.contacts@protonmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["django"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
]

[tool.hatch.build.targets.wheel]
packages = ["app-src/config", "app-src/acronyme", "app-src/logger", "app-src/resources", "app-src/manage.py"]

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "missing-docstring",
  "unused-argument",
  "no-value-for-parameter",
  "no-member",
  "no-else-return",
  "bad-whitespace",
  "bad-continuation",
  "line-too-long",
  "fixme",
  "protected-access",
  "too-few-public-methods",
]

[tool.pylint.design]
max-returns = 8

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = [
    "",
    "app-src"
]
env = [
    "ENV_PATH=app-src/.env.dist"
]
